external-crates/move/crates/move-compiler/tests/move_2024/parser/enum_invalid_2.move
module 0x42::m {
    public enum Expression {
       Done(x: u64),
       Add { u64 },
    }
}
